added display and flex direction

--- a/Home_work/work_for _Home.page/Aboutus.html
+++ b/Home_work/work_for _Home.page/Aboutus.html
@@ -15,9 +15,12 @@
       display: flex;
       text-align: left;
     background-color: rgba(3, 3, 3, 0.873);
-    color: bisque;
+    color: rgba(255, 228, 196, 0.825);
     }
-  body{}
+  body{
+    display: flex;
+    flex-direction: column;
+  }
     
   .card-image{
     position: relative;
