--- a/Home_work/work_for _Home.page/index.html
+++ b/Home_work/work_for _Home.page/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
   </head>
-  <body >
+  <body class="index">
     <header>
       <div class="contanier " style=" background: url(./pexels-dtanpt-1329711.jpg) fixed; background-size: cover; background-position: center;">
         
@@ -19,8 +19,8 @@
         <li><a  href="#">Project</a></li>
         <li><a  href="./Aboutus.html"> About us</a></li>
         <li><a  href="#">Job</a></li>
-        <li><a  href="#">Log in</a></li>
-        <li><button class= >Lets Talk ↗️ </button></li>
+        <li><a  href="./log.html">Log in</a></li>
+        <li><button class= btn >Lets Talk ↗️ </button></li>
         </ul>
 
     </nav>
