--- a/Home_work/work_for _Home.page/index.html
+++ b/Home_work/work_for _Home.page/index.html
@@ -59,18 +59,19 @@
     <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
   </div>
   <!-- The slideshow/carousel -->
-  <div class="carousel-inner " style="width: 50vh; height: 50vh;" style="background-position: center; background-size: cover;">
+  <div class="carousel-inner " style="width: 200vh;">
     <div class="carousel-item active">
-      <img src="./design 1.jpg" alt="*" class="d-block w-5 0"  >
+      <img src="./design 1.jpg" alt="*" class="d-block w-50">
+      
     </div>
     <div class="carousel-item" >
-      <img src="./design 2.jpg" alt="*" class="d-block w-50" style=" background-size: cover;">
+      <img src="./design 2.jpg" alt="*" class="d-block w-50" >
     </div>
     <div class="carousel-item">
       <img src="./download.jpg" alt="*" class="d-block w-50">
     </div>
     <div class="carousel-item"  >
-      <img src="./pexels-dtanpt-1329711.jpg" alt="*" class="d-block w-100">
+      <img src="./pexels-dtanpt-1329711.jpg" alt="*" class="d-block w-50">
     </div>
     <div class="carousel-item">
       <img src="./download.jpg" alt="*" class="d-block w-50">
